@@ -1,0 +1,19 @@
+# Generated by Django 2.1.7 on 2019-04-16 22:56
+
+import accounts.models
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('accounts', '0012_student_grades'),
+    ]
+
+    operations = [
+        migrations.AlterField(
+            model_name='user',
+            name='profile_photo',
+            field=models.ImageField(blank=True, upload_to=accounts.models.photo_upload_address),
+        ),
+    ]
