@@ -1,0 +1,25 @@
+# Generated by Django 2.1.7 on 2019-04-16 22:29
+
+from django.db import migrations, models
+import django.db.models.deletion
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('accounts', '0012_student_grades'),
+        ('courses', '0018_auto_20190416_2143'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='course',
+            name='prof',
+            field=models.ForeignKey(blank=True, default=None, on_delete=django.db.models.deletion.CASCADE, to='accounts.Professor'),
+        ),
+        migrations.AddField(
+            model_name='course',
+            name='students',
+            field=models.ManyToManyField(to='accounts.Student'),
+        ),
+    ]
